--- a/deploy/openshift/ecommerce-app/discounts.yaml
+++ b/deploy/openshift/ecommerce-app/discounts.yaml
@@ -20,10 +20,12 @@ spec:
         app: ecommerce
     spec:
       containers:
-      - image: ddtraining/discounts-service:latest
-        name: discounts
-        command: ["ddtrace-run"]
-        args: ["flask", "run", "--port=5001", "--host=0.0.0.0"]
+      - name: discounts
+        image: ddtraining/discounts-service:latest
+        command: ["/bin/sh", "-c"]
+        args:
+          - pip install gunicorn &&
+            ddtrace-run gunicorn --bind 0.0.0.0:5001 discounts:app
         env:
           - name: FLASK_APP
             value: "discounts.py"
